examples/type_system/failing/74_hm_index_non_indexable_compile_mismatch.flx
fn bad(x: Int) -> Int {
    x[0]
}

fn main() -> Unit with IO {
    print(to_string(bad(7)))
}
